/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.airavata.jupyter.container.magic.api;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message DataUploadEntry {
  string filePath = 1;
  string uploadedPath = 2;
}

message PythonCellExecutionRequest {
  string cellContent = 1;
  bytes localScope = 2;
  repeated DataUploadEntry uploadEntries = 3;
}

message PythonCellExecutionResponse {
  string stdOut = 1;
  string stdErr = 2;
  bytes localScope = 3;
}

service ContainerMagicApi {
  rpc executePythonCell (PythonCellExecutionRequest) returns (PythonCellExecutionResponse) {

  }
}

